syntax = "proto3";

option go_package = "sigmaos/tracing/proto";

message SpanContextConfig {
  bytes  traceID    = 1;
  float  spanID     = 2;
  int32  traceFlags = 3;
  string traceState = 4;
  bool   remote     = 5;
}
